обучение не завершалось если очередь прокачки заполнена

--- a/education/templates/education/edu_lists/list_9.html
+++ b/education/templates/education/edu_lists/list_9.html
@@ -106,7 +106,7 @@
       {
         text: "{% trans 'Есть ещё и особые Навыки, которые откроются по мере развития. Они дают уникальные преимущества и могут серьёзно расширить ваши возможности.' context 'education' %}",
       },
-
+         {% if not full_queue %}
       {
         text: "{% trans 'Их стоит прокачивать, как только у вас появится шанс. А теперь выберите, какую характеристику хотите развить в первую очередь.' context 'education' %}",
         awaitedDomElemClass: 'eduBlock3',
@@ -116,7 +116,7 @@
         text: "{% trans 'Давайте сделаем вклад в ваше будущее прямо сейчас!' context 'education' %}",
         awaitedDomElemClass: 'eduBlock4',
       },
-
+        {% endif %}
       {
         text: "{% trans 'Ну вот, я передала вам все ключевые знания для старта с чистого листа. Мы проделали отличную работу, и я благодарю вас за плодотворное сотрудничество!' context 'education' %}",
       },
