--- a/education/templates/education/edu_overview.html
+++ b/education/templates/education/edu_overview.html
@@ -541,12 +541,12 @@
               <div class="overview__chat-message-wrapper">
                 <!--ник и дата-->
                 <div class="overview__chat-message-header">
-                  <h3>протестующие</h3>
+                  <h3>{% trans 'протестующие' context 'education' %}</h3>
                   <span id="mess_time">03:04</span>
                 </div>
                 <div class="overview__chat-message-body">
                   <!--текст сообщения-->
-                  <p>Не прячьтесь за стенами, ответьте на вопросы!</p>
+                  <p>{% trans 'Не прячьтесь за стенами, ответьте на вопросы!' context 'education' %}</p>
                 </div>
               </div>
             </div>
