--- a/education/templates/education/edu_mining.html
+++ b/education/templates/education/edu_mining.html
@@ -27,13 +27,13 @@
   {% with LANGUAGE_CODE='ru' %}
 <main>
 <section class="earn" id="mining_main">
-    <h1 class="earn__title ct__page-title">Добыча</h1>
+    <h1 class="earn__title ct__page-title">{% trans 'Добыча' context "mining" %}</h1>
     <p class="earn__info">
-        Потрать энергию и получи <br>
-        до $ 25&nbsp;375<span class="info__gold"> + G 100</span> за день!
+        {% trans 'Потрать энергию и получи' context "daily_header" %} <br>
+        {% trans 'до' context "daily_header" %} $ 25&nbsp;375<span class="info__gold"> + G 100</span> {% trans 'за день!' context "daily_header" %}
     </p>
     <div class="earn__energy-wrapper ct__widebar">
-        <span>энергии потрачено:</span>
+        <span>{% trans 'энергии потрачено' context "daily_header" %}:</span>
         <div class="ct__widebar-bar">
 
             <span id="energy_consumption">0</span>
@@ -45,7 +45,7 @@
 
     <button class="earn__long-btn ct__long-btn btn eduBlock2"  onclick="mine_edu_financing()">
 
-        <span style="display: inline-block;">получить: $</span>
+        <span style="display: inline-block;">{% trans 'получить' context "daily_header" %}: $</span>
         <span style="display: inline-block;" id="daily_current_sum">0</span>
 
         <svg width="176" height="31" viewBox="0 0 176 31" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -64,12 +64,12 @@
     </button>
 
     <p class="earn__after-btn">
-        уже получено:
+        {% trans 'уже получено' context "daily_header" %}:
         $0
     </p>
     <div class="earn__card ct__card">
-        <h3>Золото</h3>
-        <span>Запасы: 20.00 / 20.00</span>
+        <h3>{% trans 'Золото' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: 20.00 / 20.00</span>
         <p>
             <span style="display: inline-block;color: #eb9929;">
                 + G <span style="display: inline-block;" class="be_mined" data-modifier="0.1">10</span>
@@ -82,14 +82,14 @@
             <input type="number" min="0" max="100" value="100" step="10" name="energy">
 
 
-            <button class="btn-mining">добыча</button>
+            <button class="btn-mining">{% trans 'добыча' context "mining" %}</button>
 
         </form>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"></path></svg>
     </div>
     <div class="earn__card ct__card">
-        <h3>Нефть</h3>
-        <span>Запасы: 24.32 / 25.00</span>
+        <h3>{% trans 'Нефть' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: 24.32 / 25.00</span>
         <p>
             <span style="display: inline-block;">
                 + Brent: <span style="display: inline-block;" class="be_mined" data-modifier="2.02">202</span>
@@ -106,14 +106,14 @@
         <input type="number" min="0" max="100" value="100" step="10" name="energy">
 
 
-        <button class="btn-mining eduBlock1" onclick="mine_edu_crude()">добыча</button>
+        <button class="btn-mining eduBlock1" onclick="mine_edu_crude()">{% trans 'добыча' context "mining" %}</button>
 
         </div>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"></path></svg>
     </div>
     <div class="earn__card ct__card">
-        <h3>Руда</h3>
-        <span>Запасы: 54.80 / 55.00</span>
+        <h3>{% trans 'Руда' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: 54.80 / 55.00</span>
         <p>
             <span style="display: inline-block;">
                 +
@@ -140,7 +140,7 @@
             <input type="number" min="0" max="100" value="100" step="10" name="energy">
 
 
-            <button class="btn-mining eduBlock1" onclick="mine_edu_crude()">добыча</button>
+            <button class="btn-mining eduBlock1" onclick="mine_edu_crude()">{% trans 'добыча' context "mining" %}</button>
 
         </div>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"></path></svg>
