--- a/education/templates/education/edu_storage.html
+++ b/education/templates/education/edu_storage.html
@@ -27,7 +27,7 @@
   {% with LANGUAGE_CODE='ru' %}
 <main>
     <section class="store custom-scroll">
-    <h1 class="store__title ct__page-title">Склад</h1>
+    <h1 class="store__title ct__page-title">{% trans 'Склад' context "storage" %}</h1>
     <div class="store__tabs ct__top-tabs">
         <button class="ct__top-tab ct__top-tab1 active ct__mid-btn" id="store_tab">
             <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
@@ -41,7 +41,7 @@
                     <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"></path>
                 </g>
             </svg>
-            <span>склад</span>
+            <span>{% trans 'склад' context "storage" %}</span>
         </button>
         <button class="ct__top-tab ct__top-tab2 ct__mid-btn" id="vault_tab">
             <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +55,7 @@
                     <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"></path>
                 </g>
             </svg>
-            <span>хранилище</span>
+            <span>{% trans 'хранилище' context "storage" %}</span>
         </button>
     </div>
     <div class="store__wrapper-overflow">
@@ -76,19 +76,19 @@
     <div id="trade_tab">
         <form id="money_transfer_frm" role="form" class="store__exch-wrapper">
             <input type="hidden" name="csrfmiddlewaretoken" value="gv8AXVPdXrA3d4Mq3DCX6jUe2xhLBz8R0Ij1URYifZU0LuO5wEP7ypD5IaunSvSw">
-            <span class="store__exch-left-text">счёт</span>
+            <span class="store__exch-left-text">{% trans 'счёт' context "has_storage" %}</span>
             <button type="submit" id="do_transfer" class="eduBlock1"> <!--кнопка перевода средств на склад-->
                 <svg width="41" height="60" viewBox="0 0 41 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M41 0L-3.8147e-06 -1.79217e-06L-5.53219e-06 39.2917L20.5 59.7917L41 39.2917L41 0Z" fill="var(--c10two)"></path>
                     <path d="M35.5 23L6.65384 23L5.5 23M35.5 23L27.4231 15M35.5 23L27.4231 31M5.5 23L13.5 15M5.5 23L13.5 31" stroke="var(--c60)" stroke-width="3"></path>
                 </svg>
-            </button> <!--конец кнопки перевода средств на склад-->
-            <span class="store__exch-right-text">наличные</span>
+            </button> <!--конец кнопки перевода {% trans 'наличные' context "has_storage" %} на склад-->
+            <span class="store__exch-right-text">{% trans 'наличные' context "has_storage" %}</span>
             <input class="store__num-left" type="number" min="0" value="{% localize off %}{{ player.cash }}{% endlocalize %}" name="cash_at_player" id="cash_at_player"> <!--инпут наличных-->
             <input class="store__num-right" type="number" min="0" value="800" name="cash_at_storage" id="cash_at_storage"> <!--инпут на складе-->
             <div id="storage_cash" data-text="800" style="display: none"></div>
             <p>
-                <span>всего денег:</span>
+                <span>{% trans 'всего денег' context "has_storage" %}:</span>
                 </p><p>
                 {{ player.cash|get_sum:800 }}
                 </p> <!--значение "всего денег"-->
@@ -100,14 +100,14 @@
     </div>
     <ul class="store__list">
         <li class="store__item" style="justify-content: center">
-            <p>Уровень: 1</p>
+            <p>{% trans 'Уровень:' context "has_storage" %} 1</p>
         </li>
         <!-- ['small', 'medium', 'large'] -->
 
 
         <li class="store__item eduBlock2" style="margin-top: 2vh"><!--шапка типоразмера-->
 
-            <p>Большой объём</p>
+            <p>{% trans 'Большой' context 'education' %} {% trans 'объём' context "has_storage" %}</p>
             <span>
                 0 /
 
@@ -127,7 +127,7 @@
 
         <li class="store__item eduBlock2" style="margin-top: 2vh"><!--шапка типоразмера-->
 
-            <p>Средний объём</p>
+            <p>{% trans 'Средний' context 'education' %} {% trans 'объём' context "has_storage" %}</p>
             <span>
                 3 /
 
@@ -140,7 +140,7 @@
         </li><!--шапка типоразмера-->
                     <li class="store__item"><!--начало товара-->
 
-                        <p>Глицин</p>
+                        <p>{% trans 'Глицин' context 'education' %}</p>
                         <span>
                             1
                         </span> <!--значение товара-->
@@ -148,15 +148,11 @@
 
                     <li class="store__item"><!--начало товара-->
 
-                        <p>Мельдоний</p>
+                        <p>{% trans 'Мельдоний' context 'education' %}</p>
                         <span>
                             1
                         </span> <!--значение товара-->
                     </li><!--конец товара-->
-
-
-
-
 
                     <li class="store__item"><!--начало товара-->
 
@@ -168,7 +164,7 @@
 
         <li class="store__item eduBlock2" style="margin-top: 2vh"><!--шапка типоразмера-->
 
-            <p>Малый объём</p>
+            <p>{% trans 'Малый' context 'education' %} {% trans 'объём' context "has_storage" %}</p>
             <span>
                 0 /
 
@@ -188,18 +184,17 @@
 	      <!-- ВКЛАДКА ХРАНИЛИЩЕ -->
 	      <div class="store__right">
 					<h2 class="store__right-title">
-						энергетики:
+						{% trans 'энергетики' context "storage_assets" %}:
 						<label id="bottles">
 						1&nbsp;000 <!--значение количества энергетиков-->
 						</label>
 					</h2>
 					<div id="produce_energy_form" class="store__right-block eduBlock5">
-						<input type="hidden" name="csrfmiddlewaretoken" value="gv8AXVPdXrA3d4Mq3DCX6jUe2xhLBz8R0Ij1URYifZU0LuO5wEP7ypD5IaunSvSw">
-						<span>создать:</span>
+						<span>{% trans 'создать' context "storage_assets" %}:</span>
 						<label>
 						<input type="number" min="10" max="12000" step="10" value="6010" name="energy_field" id="energy_field">
 						</label>
-						<span>стоимость:
+						<span>{% trans 'стоимость' context "storage_assets" %}:
 							<i>G</i> <i id="gold_cost">601</i> <!--значение стоимость-->
 						</span>
 						<input type="range" id="energy_range" min="10" max="12000" step="10" value="6010">
@@ -215,7 +210,7 @@
 									<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"></path>
 								</g>
 							</svg>
-							<span>создать</span>
+							<span>{% trans 'создать' context "storage_assets" %}</span>
 						</button>
 						<svg width="312" height="98" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"></path>
@@ -227,7 +222,7 @@
 							<img src="/static/img/wild_pass.svg" alt="wild_pass" class="eduBlock6">
 						</picture>
 						<div class="store__wp-wrapper-r" id="wildpass_main">
-							<span>Количество: <label id="wp_count">0</label></span>
+							<span>{% trans 'Количество' context "storage_assets" %}: <label id="wp_count">0</label></span>
 							<button disabled="" class="ct__mid-btn">
 								<svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
 									<mask id="mask0_259_320" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
@@ -240,7 +235,7 @@
 										<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"></path>
 									</g>
 								</svg>
-								<span>использовать</span>
+								<span>{% trans 'использовать' context "storage_assets" %}</span>
 							</button>
 						</div>
 					</div>
