Новый сезон "Пригласи друга"

--- a/event/templates/event/inviting.html
+++ b/event/templates/event/inviting.html
@@ -68,6 +68,8 @@
 				{% trans 'Новички должны указать ваш ID на вкладке "активировать", первые трое суток после регистрации.' context "game_event" %}
 				<br>
 				{% trans 'Игроки, заходившие в проект более 30 дней назад, также имеют доступ к указанной вкладке.' context "game_event" %}
+				<br>
+				<b style="color: var(--c10two)">{% trans 'В данном сезоне игрового события не получится пригласить игроков, которые уже принимали приглашение в прошлом сезоне!' context "game_event" %}</b>
 			</p>
 			<br>
 			<p class="ct__s-text">
