--- a/education/templates/education/edu_skills.html
+++ b/education/templates/education/edu_skills.html
@@ -52,7 +52,7 @@
       </button>
 
         <p id="skill_power" style="display: none;font-size: 14rem; justify-content: center;  flex-direction: column;">
-            изучается...
+            {% trans 'изучается...' context 'education' %}
         </p>
 
     </div>
@@ -92,7 +92,7 @@
       </button>
 
     <p id="skill_knowledge" style="display: none;font-size: 14rem; justify-content: center;  flex-direction: column;">
-        изучается...
+        {% trans 'изучается...' context 'education' %}
     </p>
 
     </div>
@@ -135,7 +135,7 @@
 
 
     <p id="skill_endurance" style="display: none;font-size: 14rem; justify-content: center;  flex-direction: column;">
-        изучается...
+        {% trans 'изучается...' context 'education' %}
     </p>
 
     </div>
