--- a/education/templates/education/edu_lists/list_4.html
+++ b/education/templates/education/edu_lists/list_4.html
@@ -65,6 +65,9 @@
             document.getElementById('damage_count').innerHTML = '1 823';
         }
         if (page == 6){
+            document.getElementById('eduPrevBtn').style.opacity = 0;
+            document.getElementById('eduPrevBtn').disabled = true;
+            
             document.getElementById('energy').innerHTML = '0';
 
             const imgElement = document.querySelector('.edu__img');
