--- a/player/templates/player/redesign/game_event/play_market_event.html
+++ b/player/templates/player/redesign/game_event/play_market_event.html
@@ -13,8 +13,8 @@
     <div class="articles__inner articleShowBlock active">
         <div class="articles__textContent">
 
-	<p style="text-align: center;">
-				<img src="https://clip2net.com/clip/m491909/40880-clip-380kb.jpg" style="width: 919px;">
+			<p style="text-align: center;">
+				<img src="/static/redesign/img/header{% if en_lang %}_eng{% endif %}.png" style="width: 1000px;">
 			</p>
 
 			<p style="text-align: center;">
