--- a/education/templates/education/edu_lists/list_1.html
+++ b/education/templates/education/edu_lists/list_1.html
@@ -17,7 +17,7 @@
           success: function(result){
               if (id == 'edu_all'){
                   if (result.response == 'ok'){
-                      actualize();
+                      location.reload();
                   }
               }
           }
