правка цветовой схемы на карте

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -8018,7 +8018,7 @@ p.overview__love-stat-timer {
 	height: 8rem;
 	width: 100%;
 	margin-bottom: 4rem;
-	background-image: linear-gradient(to right, #fe1e00, #01fe21);
+	background-image: linear-gradient(to right, #C0C0C0, #01fe21);
 }
 
 .map__top-text {
