--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -704,7 +704,7 @@ function addMarker(coordinates) {
     <!--формирование цветов на карте для переданных значений-->
 
     function generateColorCode(lowerBound, upperBound, value) {
-      var lowerColor = "#FE1E00"; // Код цвета нижней границы
+      var lowerColor = "#C0C0C0"; // Код цвета нижней границы
       var upperColor = "#01FE21"; // Код цвета верхней границы
 
       // Преобразование кодов цвета в RGB-значения
