--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -1070,7 +1070,7 @@
     });
 
     // Если флаг отсутствует или истёк, показываем модальное окно
-    display_modal('ask', 'Обновите приложение!', 'Ваше приложение устарело. Обновите его', 'Загрузить', 'Скрыть');
+    display_modal('ask', '{% trans 'Обновите приложение' context "overview" %}', '{% trans 'Ваше приложение устарело. Обновите его' context "overview" %}', '{% trans 'Загрузить' context "overview" %}', '{% trans 'Скрыть' context "overview" %}');
   });
 
   {% endif %}
